--- a/index.html
+++ b/index.html
@@ -984,7 +984,7 @@
         marker_4edae3cfb0048a67edfc06f5fc75a4b4.bindPopup(popup_4bccf505d69026d055546d87205c6caa)
         ;
 
-        var url_to_geotiff_file=  'https://drive.google.com/uc?export=download&id=1-YYtxM5MYzJPXeHveMn2Mrw3RG1PliBd';
+        var url_to_geotiff_file=  './maiz22_low.tif';
 
 fetch(url_to_geotiff_file)
   .then(response => response.arrayBuffer())
