--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-    
+    <title>Route map - Crop tour</title>
         <script>
             L_NO_TOUCH = false;
             L_DISABLE_3D = false;
